--- a/login.html
+++ b/login.html
@@ -9,8 +9,9 @@
     <title>Clinica PrimeCare</title>
 </head>
 <body>
-    
+    <div class="overlay"></div>
     <main>
+        <img src="./images/logo-semfundo.png" alt="Logo PrimeCare">
             <div class="loginFields">
                 <label for="usuario">Usuário: </label>
                 <input type="text" name="usuario" id="usuario">
@@ -19,7 +20,7 @@
                 <button><span class="material-symbols-outlined">login</span> Entrar </button>
             </div>
             <div class="registerLink">
-                <p>Ainda não é cadastrado? <a href="">Cadastre-se!</a></p>
+                <p>Ainda não é cadastrado? <a href="">Cadastre-se</a></p>
             </div>
       </main>
 </body>
