--- a/login.html
+++ b/login.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="login.css">
     <link rel="icon" href="./images/logo-semfundo.png">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <title>Clinica PrimeCare</title>
+    <title>Login - PrimeCare</title>
 </head>
 <body>
     <div class="overlay"></div>
@@ -20,7 +20,7 @@
                 <button><span class="material-symbols-outlined">login</span> Entrar </button>
             </div>
             <div class="registerLink">
-                <p>Ainda não é cadastrado? <a href="">Cadastre-se</a></p>
+                <p>Ainda não é cadastrado? <a href="cadastro.html">Cadastre-se</a></p>
             </div>
       </main>
 </body>
