<CHORE> NavBar / Style

--- a/login.html
+++ b/login.html
@@ -9,19 +9,26 @@
     <title>Login - PrimeCare</title>
 </head>
 <body>
+    <header>
+        <nav>
+
+        </nav>
+    </header>
     <div class="overlay"></div>
     <main>
         <img src="./images/logo-semfundo.png" alt="Logo PrimeCare">
             <div class="loginFields">
                 <label for="usuario">Usuário: </label>
-                <input type="text" name="usuario" id="usuario">
+                <input type="text" name="usuario" id="usuario" placeholder="Usuário">
                 <label for="senha">Senha: </label>
-                <input type="password" name="senha" id="senha">
+                <input type="password" name="senha" id="senha" placeholder="Senha">
                 <button><span class="material-symbols-outlined">login</span> Entrar </button>
             </div>
             <div class="registerLink">
-                <p>Ainda não é cadastrado? <a href="cadastro.html">Cadastre-se</a></p>
+                <p>Ainda não é cadastrado ou esqueceu a senha? Contate o suporte. <a href="cadastro.html">Cadastre-se</a></p>
             </div>
       </main>
+
+      <footer>© 2024 Clinica PrimeCare - Todos os direitos reservados. </footer>
 </body>
 </html>
