--- a/home/galeria.html
+++ b/home/galeria.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Galeria Prime Care</title>
-    <meta name="viewport" content="width=devide-width" , initial-scale="1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="galeria_style.css">
 </head>
 
@@ -13,51 +13,44 @@
 <body>
 
     <header>
-        <div class="container">
-            <h1>Clínica Prime Care</h1>
             <img class="logo" src="images/logo.png" height="60px" alt="Logo Clínica Médica">
-        </div>
     </header>
 
     <nav>
-        <ul class="menu">
-            <li><a href="home.html">Home</a></li>
-            <li><a class="active" href="galeria.html">Galeria</a>
-                <ul>
-                    <li class="galerias"><a href="medicos.html">Equipe Médica</a></li>
-                    <li class="galerias"><a href="labs.html">Laboratórios</a></li>
-                    <li class="galerias"><a href="consult.html">Consultório</a></li>
-                    <li class="galerias"><a href="recep.html">Recepção</a></li>
-                </ul>
-            </li>
-            <li><a href="login.html">Login</a></li>
-        </ul>
+        <a href="home.html">Home</a>
+        <a class="active" href="galeria.html">Galeria</a>
+        <a href="login.html">Login</a>
     </nav>
 
     <main>
-        <h1>Galeria</h1>
         <div class="galeria">
-            <div class="container2">
+            <div class="container">
+                <h1>Equipe Médica</h1>
+                <p>Nossa missão é oferecer cuidados de saúde excepcionais, baseados em uma abordagem holística que prioriza o bem-estar físico, emocional e mental de nossos pacientes. Nossa equipe médica é impulsionada por uma série de valores que orientam cada interação e decisão.</p>
+            </div>
+            <div class="container">
                 <img src="images/fotomedic.jpg" width="150" height="150" alt="Time Médico" class="image">
                 <div class="overlay">
                     <a href="medicos.html">
                         <div class="text">Equipe Médica</div>
                     </a>
                 </div>
-
-
             </div>
-            <div class="container2">
+
+            <div class="container">
                 <img src="images/fotolabs.jpg" width="150" height="10" alt="Time Médico" class="image">
                 <div class="overlay">
                     <a href="labs.html">
                         <div class="text">Laboratórios</div>
                     </a>
                 </div>
-
-
+                <div class="container">
+                    <h1>Equipe Médica</h1>
+                    <p>Nossa missão é oferecer cuidados de saúde excepcionais, baseados em uma abordagem holística que prioriza o bem-estar físico, emocional e mental de nossos pacientes. Nossa equipe médica é impulsionada por uma série de valores que orientam cada interação e decisão.</p>
+                </div>
             </div>
-            <div class="container2">
+            
+            <div class="container">
                 <img src="images/fotoconsult.jpg" width="150" height="150" alt="Time Médico" class="image">
                 <div class="overlay">
                     <a href="consult.html">
@@ -68,7 +61,7 @@
 
             </div>
 
-            <div class="container2">
+            <div class="container">
                 <img src="images/fotorecp.jpg" width="150" height="150" alt="Time Médico" class="image">
                 <div class="overlay">
                     <a href="recep.html">
