--- a/home/home.html
+++ b/home/home.html
@@ -14,9 +14,7 @@
 <body>
 
     <header>
-        <div class="cabecalho">
             <img class="logo" src="images/logo.png" alt="Logo Clínica Médica">
-        </div>
     </header>
 
     <nav>
@@ -26,8 +24,8 @@
     </nav>
 
     <main>
-            <div class="container">
-                <div class="aboutUs_container">
+            <div class="aboutUs_container">
+                <div class="aboutUs_text">
                 <h2>Bem-vindo à PrimeCare</h2>
                 <p>Aqui combinamos a expertise de profissionais altamente qualificados
                     com tecnologia de ponta para oferecer uma experiência médica excepcional e personalizada.</p>
@@ -45,16 +43,22 @@
                     apoiá-lo em cada passo do seu caminho para uma vida mais saudável e vibrante.</p>
                 </div>
             </div>
-<!--                    <h4>Nossos Valores</h4>
-                    <ul>
-                        <li>Empatia</li>
-                        <li>Respeito</li>
-                        <li>Ética</li>
-                        <li>Integridade</li>
-                        <li>Inovação</li>
-                        <li>Tecnologia</li>
-                        <li>Acessibilidade</li>
-                    </ul>
+
+            <div class="values_container">
+                    <img src="./images/logoazul.png" alt="Logotipo - Clinica PrimeCare">
+                    <div class="values_text">
+                        <h2>Nossos Valores</h2>
+                            <p>Empatia</p>
+                            <p>Respeito</p>
+                            <p>Ética</p>
+                            <p>Integridade</p>
+                            <p>Inovação</p>
+                            <p>Tecnologia</p>
+                            <p>Acessibilidade</p>
+                    </div>
+            </div>
+                
+            <!--        
                 
                     <h4>Entre em Contato:</h4>
                     <p><span class="material-symbols-outlined">☎</span> (34) 3239-0939</p>
