Tela Agendamento e ajustes nas demais

--- a/home/cad_pacientes.html
+++ b/home/cad_pacientes.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Cadastro de Usuários</title>
 <link rel="stylesheet" href="cad_pacientes_style.css">
+<link rel="icon" href="../images/logo-semfundo.png">
 </head>
 <body>
 
