--- a/home/galeria.html
+++ b/home/galeria.html
@@ -7,6 +7,7 @@
     <title>Galeria Prime Care</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="galeria_style.css">
+    <link rel="icon" href="../images/logo-semfundo.png">
 </head>
 
 
@@ -19,7 +20,7 @@
     <nav>
         <a href="home.html">Home</a>
         <a class="active" href="galeria.html">Galeria</a>
-        <a href="login.html">Login</a>
+        <a href="../login.html">Login</a>
     </nav>
 
     <main>
