--- a/home/home.html
+++ b/home/home.html
@@ -7,7 +7,7 @@
     <title>Home - Prime Care</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="home.css">
-    <link rel="icon" href="./images/logo-semfundo.png">
+    <link rel="icon" href="../images/logo-semfundo.png">
 </head>
 
 
@@ -20,7 +20,7 @@
     <nav>
         <a class="active" href="home.html">Home</a>
         <a href="galeria.html">Galeria</a>
-        <a href="login.html">Login</a>
+        <a href="../login.html">Login</a>
     </nav>
 
     <main>
