--- a/home/medicos.html
+++ b/home/medicos.html
@@ -7,6 +7,7 @@
     <title>Time Médico</title>
     <meta name="viewport" content="width=devide-width" , initial-scale="1">
     <link rel="stylesheet" href="fotos_style.css">
+    <link rel="icon" href="../images/logo-semfundo.png">
 </head>
 
 
@@ -30,7 +31,7 @@
                     <li class="galerias"><a href="recep.html">Recepção</a></li>
                 </ul>
             </li>
-            <li><a href="login.html">Login</a></li>
+            <li><a href="../login.html">Login</a></li>
         </ul>
     </nav>
 
