--- a/home/cad_funcionarios.html
+++ b/home/cad_funcionarios.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro de Funcionários</title>
+    <link rel="icon" href="../images/logo-semfundo.png">
     <link rel="stylesheet" href="cad_funcionarios_style.css">
 </head>
 
