Background changed for photo and responsive

--- a/home.html
+++ b/home.html
@@ -13,7 +13,6 @@
 
 
 <body>
-
         <header>
             <div class="center">
             <div class="logo"><img src="images/logo.png" alt="Logo Clínica Médica"></div>
@@ -28,11 +27,9 @@
         </header>
         <!--<iframe src="https://www.youtube.com/embed/7_uqVYtbddo?si=y4XeQBdQCaM7ADfn?autoplay=1" title="YouTube video player" frameborder="0" allow="autoplay; encrypted-media"></iframe>
         -->
-        <div class="video-container">
-            <video loop autoplay muted>
-                <source src="images/home/backgroundVideo.mp4" type="video/mp4">
-            </video>
-            <div class="video-overlay"></div>
+        <div class="background-container">
+            <img src="./images/home/backgroundhome.jpg" alt="Imagem de fundo">
+            <div class="background-overlay"></div>
         </div>
         
         <main>
@@ -54,11 +51,7 @@
     </main>
 
     <footer>
-        <footer>
-            <p>© 2024 Clinica PrimeCare - Todos os direitos reservados.</p>
-        </footer>
-        
+        <p>© 2024 Clinica PrimeCare - Background and logo designed by Freepik</p>
     </footer>
-
 </body>
 </html>
