--- a/galeria.html
+++ b/galeria.html
@@ -21,57 +21,54 @@
                 <a href="home.html">Home</a>
                 <a class="active" href="galeria.html">Galeria</a>
                 <a href="agendamento.html">Agendamento</a>
-                <a href="cadastro.html">Novo Endereço</a>
+                <a href="novoEnd.html">Novo Endereço</a>
                 <a href="login.html">Login</a>
             </nav>
         </div>
     </header>
 
     <main>
+        <h1>Galeria</h1>
+        <p>Nossa missão é oferecer cuidados de saúde excepcionais, baseados em uma abordagem holística que prioriza o bem-estar físico, emocional e mental de nossos pacientes. Nossa equipe médica é impulsionada por uma série de valores que orientam cada interação e decisão.</p>
         <div class="galeria">   
             <div class="container">
-                <img src="./images/galeria/fotomedic.jpg" alt="Time Médico" class="image">
-                <div class="overlay">
+                <div class="galeria_text">
                     <a href="medicos.html">
-                        <div class="overlay_text">Equipe Médica
-                            <p>Nossa missão é oferecer cuidados de saúde excepcionais, baseados em uma abordagem holística que prioriza o bem-estar físico, emocional e mental de nossos pacientes. Nossa equipe médica é impulsionada por uma série de valores que orientam cada interação e decisão.</p></div>
+                        <h1>Equipe Médica</h1>
+                        <img src="./images/galeria/fotomedic.jpg" alt="Time Médico" class="image">
+                    </a>
+                </div>
+            </div>
+            
+
+            <div class="container">
+                        <div class="galeria_text">
+                        <a href="labs.html">
+                            <h1>Laboratórios</h1>
+                            <img src="./images/galeria/fotolabs.jpg" alt="Time Médico" class="image">                        
+                        </a>
+                </div>
+            </div>
+
+
+            <div class="container">
+                <div class="galeria_text">
+                    <a href="./consult.html">
+                        <h1>Time Médico</h1>
+                        <img src="./images/galeria/fotoconsult.jpg" alt="Time Médico" class="image">
                     </a>
                 </div>
             </div>
 
+
             <div class="container">
-                <img src="./images/galeria/fotolabs.jpg" alt="Time Médico" class="image">
-                <div class="overlay">
-                    <a href="labs.html">
-                        <div class="overlay_text">Laboratórios
-                            <p>Nossa missão é oferecer cuidados de saúde excepcionais, baseados em uma abordagem holística que prioriza o bem-estar físico, emocional e mental de nossos pacientes. Nossa equipe médica é impulsionada por uma série de valores que orientam cada interação e decisão.</p>
+                        <div class="galeria_text">
+                            <a href="recep.html">
+                                <h1>Recepção</h1>
+                                <img src="./images/galeria/fotorecp.jpg" alt="Time Médico" class="image">
+                            </a>
                         </div>
-                    </a>
                 </div>
-            </div>
-
-            <div class="container">
-                <img src="./images/galeria/fotoconsult.jpg" alt="Time Médico" class="image">
-                <div class="overlay">
-                    <a href="consult.html">
-                        <div class="overlay_text">Time Médico<p>Nossa missão é oferecer cuidados de saúde excepcionais, baseados em uma abordagem holística que prioriza o bem-estar físico, emocional e mental de nossos pacientes. Nossa equipe médica é impulsionada por uma série de valores que orientam cada interação e decisão.</p></div>
-                    </a>
-                </div>
-            </div>
-
-
-
-            <div class="container">
-                <img src="./images/galeria/fotorecp.jpg" width="150" height="150" alt="Time Médico" class="image">
-                <div class="overlay">
-                    <a href="recep.html">
-                        <div class="overlay_text">Recepção</div>
-                    </a>
-                </div>
-            </div>
-            <div class="container">
-                <h1>Recepção</h1>
-                <p>Nossa missão é oferecer cuidados de saúde excepcionais, baseados em uma abordagem holística que prioriza o bem-estar físico, emocional e mental de nossos pacientes. Nossa equipe médica é impulsionada por uma série de valores que orientam cada interação e decisão.</p>
             </div>
 
         </div>
@@ -82,9 +79,7 @@
     </section>
 
     <footer>
-        <address>
-            Av. Sílvio Rugani, Lídice, Uberlândia
-        </address>
+        <p>© 2024 Clinica PrimeCare </p>
     </footer>
 
 </body>
