--- a/agendamento.html
+++ b/agendamento.html
@@ -1,30 +1,35 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="./css/navBar.css">
     <link rel="stylesheet" href="./css/agendamento.css">
+    <link rel="stylesheet" href="./css/navBar.css">
     <link rel="icon" href="./images/logo-semfundo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Agendamento - PrimeCare</title>
+    <title>Cadastro de Endereço - PrimeCare</title>
 </head>
-
 <body>
-    <div class="overlay"></div>
     <header>
         <div class="center">
         <div class="logo"><img src="images/logo.png" alt="Logo Clínica Médica"></div>
+        <div class="hamburger-container">
+            <div class="hamburger-menu">
+                <div class="line"></div>
+                <div class="line"></div>
+                <div class="line"></div>
+            </div>
+        </div>
             <nav>
-                <a class="active" href="home.html">Home</a>
+                <a href="home.html">Home</a>
                 <a href="galeria.html">Galeria</a>
-                <a href="agendamento.html">Agendamento</a>
-                <a href="novoEnd.html">Cadastro</a>
+                <a class="active" href="agendamento.html">Agendamento</a>
+                <a href="novoEnd.html">Novo Endereço</a>
                 <a href="login.html">Login</a>
             </nav>
         </div>
     </header>
 
+    <div class="overlay"></div>
     <main>
         <div class="cadastroEndereco">
             <h1>Agendamento Consulta Médica</h1>
@@ -71,6 +76,14 @@
             </form>
         </div>
     </main>
-</body>
+    <footer>
+        <p>© 2024 Clinica PrimeCare - Background and logo designed by Freepik</p>
+    </footer>
 
+    <script>
+        document.querySelector('.hamburger-menu').addEventListener('click', function() {
+            document.querySelector('nav').classList.toggle('open');
+        });
+    </script>
+</body>
 </html>
