--- a/cad_pacientes.html
+++ b/cad_pacientes.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Cadastro de Usuários</title>
-<link rel="stylesheet" href="cad_pacientes_style.css">
+<link rel="stylesheet" href="./css/cad_pacientes_style.css">
 </head>
 <body>
 
