--- a/galeria.html
+++ b/galeria.html
@@ -17,11 +17,18 @@
     <header>
         <div class="center">
         <div class="logo"><img src="images/logo.png" alt="Logo Clínica Médica"></div>
+        <div class="hamburger-container">
+            <div class="hamburger-menu">
+                <div class="line"></div>
+                <div class="line"></div>
+                <div class="line"></div>
+            </div>
+            </div>
             <nav>
                 <a href="home.html">Home</a>
                 <a class="active" href="galeria.html">Galeria</a>
                 <a href="agendamento.html">Agendamento</a>
-                <a href="cadastro.html">Novo Endereço</a>
+                <a href="novoEnd.html">Novo Endereço</a>
                 <a href="login.html">Login</a>
             </nav>
         </div>
@@ -86,7 +93,11 @@
             Av. Sílvio Rugani, Lídice, Uberlândia
         </address>
     </footer>
-
+    <script>
+        document.querySelector('.hamburger-menu').addEventListener('click', function() {
+            document.querySelector('nav').classList.toggle('open');
+        });
+    </script>
 </body>
 
 </html>
