--- a/home.html
+++ b/home.html
@@ -16,6 +16,13 @@
         <header>
             <div class="center">
             <div class="logo"><img src="images/logo.png" alt="Logo Clínica Médica"></div>
+            <div class="hamburger-container">
+                <div class="hamburger-menu">
+                    <div class="line"></div>
+                    <div class="line"></div>
+                    <div class="line"></div>
+                </div>
+            </div>
                 <nav>
                     <a class="active" href="home.html">Home</a>
                     <a href="galeria.html">Galeria</a>
@@ -53,5 +60,11 @@
     <footer>
         <p>© 2024 Clinica PrimeCare - Background and logo designed by Freepik</p>
     </footer>
+
+    <script>
+    document.querySelector('.hamburger-menu').addEventListener('click', function() {
+        document.querySelector('nav').classList.toggle('open');
+    });
+    </script>
 </body>
 </html>
