--- a/login.html
+++ b/login.html
@@ -24,6 +24,8 @@
         </form>
       </main>
 
-      <footer>© 2024 Clinica PrimeCare - Todos os direitos reservados. </footer>
+      <footer>
+        <p>© 2024 Clinica PrimeCare - Background and logo designed by Freepik</p>
+     </footer>
 </body>
 </html>
