--- a/novoEnd.html
+++ b/novoEnd.html
@@ -12,6 +12,13 @@
     <header>
         <div class="center">
         <div class="logo"><img src="images/logo.png" alt="Logo Clínica Médica"></div>
+        <div class="hamburger-container">
+            <div class="hamburger-menu">
+                <div class="line"></div>
+                <div class="line"></div>
+                <div class="line"></div>
+            </div>
+        </div>
             <nav>
                 <a href="home.html">Home</a>
                 <a href="galeria.html">Galeria</a>
@@ -43,5 +50,15 @@
             </form>
         </div>
     </main>
+
+    <footer>
+        <p>© 2024 Clinica PrimeCare - Background and logo designed by Freepik</p>
+    </footer>
+
+    <script>
+        document.querySelector('.hamburger-menu').addEventListener('click', function() {
+            document.querySelector('nav').classList.toggle('open');
+        });
+    </script>
 </body>
 </html>
