--- a/novoEnd.html
+++ b/novoEnd.html
@@ -20,7 +20,7 @@
             </div>
         </div>
             <nav>
-                <a href="home.html">Home</a>
+                <a href="index.html">Home</a>
                 <a href="galeria.html">Galeria</a>
                 <a href="agendamento.html">Agendamento</a>
                 <a class="active" href="novoEnd.html">Novo Endereço</a>
@@ -29,7 +29,6 @@
         </div>
     </header>
 
-    <div class="overlay"></div>
     <main>
         <div class="cadastroEndereco">
             <h1>Cadastro de Endereço</h1>
