--- a/acessoRestrito/cad_pacientes.html
+++ b/acessoRestrito/cad_pacientes.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Cadastro de Usuários</title>
-<link rel="stylesheet" href="./css/cad_pacientes_style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Cadastro de Usuários</title>
+    <link rel="stylesheet" href="../css/cad_pacientes_style.css">
 </head>
 <body>
 
