--- a/galeria.html
+++ b/galeria.html
@@ -25,7 +25,7 @@
             </div>
             </div>
             <nav>
-                <a href="home.html">Home</a>
+                <a href="index.html">Home</a>
                 <a class="active" href="galeria.html">Galeria</a>
                 <a href="agendamento.html">Agendamento</a>
                 <a href="novoEnd.html">Novo Endereço</a>
@@ -35,63 +35,29 @@
     </header>
 
     <main>
+        <h1>Galeria</h1>
         <div class="galeria">   
             <div class="container">
+                <div class="title">Equipe Médica</div>
                 <img src="./images/galeria/fotomedic.jpg" alt="Time Médico" class="image">
-                <div class="overlay">
-                    <a href="medicos.html">
-                        <div class="overlay_text">Equipe Médica
-                            <p>Nossa missão é oferecer cuidados de saúde excepcionais, baseados em uma abordagem holística que prioriza o bem-estar físico, emocional e mental de nossos pacientes. Nossa equipe médica é impulsionada por uma série de valores que orientam cada interação e decisão.</p></div>
-                    </a>
-                </div>
             </div>
-
             <div class="container">
+                <div class="title">Laboratórios</div>
                 <img src="./images/galeria/fotolabs.jpg" alt="Time Médico" class="image">
-                <div class="overlay">
-                    <a href="labs.html">
-                        <div class="overlay_text">Laboratórios
-                            <p>Nossa missão é oferecer cuidados de saúde excepcionais, baseados em uma abordagem holística que prioriza o bem-estar físico, emocional e mental de nossos pacientes. Nossa equipe médica é impulsionada por uma série de valores que orientam cada interação e decisão.</p>
-                        </div>
-                    </a>
-                </div>
             </div>
-
             <div class="container">
+                <div class="title">Time Médico</div>
                 <img src="./images/galeria/fotoconsult.jpg" alt="Time Médico" class="image">
-                <div class="overlay">
-                    <a href="consult.html">
-                        <div class="overlay_text">Time Médico<p>Nossa missão é oferecer cuidados de saúde excepcionais, baseados em uma abordagem holística que prioriza o bem-estar físico, emocional e mental de nossos pacientes. Nossa equipe médica é impulsionada por uma série de valores que orientam cada interação e decisão.</p></div>
-                    </a>
-                </div>
             </div>
-
-
-
             <div class="container">
+                <div class="title">Recepção</div>
                 <img src="./images/galeria/fotorecp.jpg" width="150" height="150" alt="Time Médico" class="image">
-                <div class="overlay">
-                    <a href="recep.html">
-                        <div class="overlay_text">Recepção</div>
-                    </a>
-                </div>
             </div>
-            <div class="container">
-                <h1>Recepção</h1>
-                <p>Nossa missão é oferecer cuidados de saúde excepcionais, baseados em uma abordagem holística que prioriza o bem-estar físico, emocional e mental de nossos pacientes. Nossa equipe médica é impulsionada por uma série de valores que orientam cada interação e decisão.</p>
-            </div>
-
         </div>
-
     </main>
 
-
-    </section>
-
     <footer>
-        <address>
-            Av. Sílvio Rugani, Lídice, Uberlândia
-        </address>
+        <p>© 2024 Clinica PrimeCare - Logo designed by Freepik</p>
     </footer>
     <script>
         document.querySelector('.hamburger-menu').addEventListener('click', function() {
