--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 </div>
             </div>
                 <nav>
-                    <a class="active" href="home.html">Home</a>
+                    <a class="active" href="index.html">Home</a>
                     <a href="galeria.html">Galeria</a>
                     <a href="agendamento.html">Agendamento</a>
                     <a href="novoEnd.html">Novo Endereço</a>
