--- a/login.html
+++ b/login.html
@@ -5,20 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/login_style.css">
     <link rel="icon" href="./images/logo-semfundo.png">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <title>Login - PrimeCare</title>
 </head>
 <body>
     <div class="overlay"></div>
     <main>
-        <form action="login.php" method="post">
+        <form id="loginForm" action="login.php" method="post">
             <img src="./images/logo-semfundo.png" alt="Logo PrimeCare">
             <div class="loginFields">
+                <div id="error-message"></div>
                 <label for="usuario">Usuário: </label>
                 <input type="text" name="usuario" id="usuario" placeholder="Usuário">
                 <label for="senha">Senha: </label>
                 <input type="password" name="senha" id="senha" placeholder="Senha">
-                <button type="button"><span class="material-symbols-outlined">login</span> Entrar </button>
+                <input type="submit" value="Entrar">
             </div>
             <p> Ainda não é cadastrado ou esqueceu a senha? Contate o suporte.</p>
         </form>
@@ -27,5 +27,20 @@
       <footer>
         <p>© 2024 Clinica PrimeCare - Background and logo designed by Freepik</p>
      </footer>
+
+     <script>
+        document.getElementById('loginForm').addEventListener('submit', function(event) {
+            var usuarioInput = document.getElementById('usuario');
+            var senhaInput = document.getElementById('senha');
+            var errorMessage = document.getElementById('error-message');
+
+            errorMessage.innerHTML = '';
+
+            if (usuarioInput.value === '' || senhaInput.value === '') {
+                errorMessage.innerHTML = 'Preencha todos os campos obrigatórios';
+                event.preventDefault();
+            }
+        });
+    </script>
 </body>
 </html>
